# Normal-Form

./: CMakeLists.txt  H_complex_terms.txt  README.md  [20260313]作用量计算结果.docx  action_angle.txt  build_coordinate_transforms.m  complexify_hamiltonian.m  compute_libration_point_params.m  crtbp_state_to_complex.m  expand_hamiltonian.m  export_H_complex.m  fun_crtbp_.m  hamiltonian_after_diagonalization.m  lie_transformation.asv  lie_transformation.m  main.m  main_Orbit_.m  plot_action_angle.m  qp_points.txt  reduce.m  transform_to_action_angle.m  目标库.docx
Normal_Form/: normal_form.sln
Normal_Form/normal_form/: H_complex_terms.txt  main.cpp  normal_form.cpp  normal_form.hpp  normal_form.vcxproj  normal_form.vcxproj.filters  qp_points.txt
Normal_Form/normal_form/x64/Release/: normal_form.exe.recipe  normal_form.iobj  normal_form.ipdb
Normal_Form/normal_form/x64/Release/normal_form.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  normal_form.lastbuildstate
